# cuda-raytracer

./: .clangd  .gitignore  CMakeLists.txt  README.md  main.cpp  output.ppm
.cache/clangd/index/: camera.hpp.91C059872C195DB7.idx  color.hpp.0EE7A04B3298BE50.idx  gl.c.4C0E3CACD0847E32.idx  gl.h.8BC6B0256B08A713.idx  hello_triangle.cpp.62D0ABCA015A8641.idx  hittable.hpp.CB79A4F16529728F.idx  hittable_list.hpp.5EAF76E02F9A850C.idx  imconfig.h.ECAE1D66182D1C2E.idx  imgui.cpp.07ED6CEA5BA52C79.idx  imgui.h.7E39E3D084DC8E24.idx  imgui_demo.cpp.A59A7527B7A4FFF5.idx  imgui_draw.cpp.C5BBAE56D64473E5.idx  imgui_impl_glfw.cpp.9246D54C33EBA641.idx  imgui_impl_glfw.h.7F8950351F4E23D0.idx  imgui_impl_opengl3.cpp.F959AD172EA39E9D.idx  imgui_impl_opengl3.h.150188FCF83673F1.idx  imgui_impl_opengl3_loader.h.88053370170086D3.idx  imgui_internal.h.51D7DA2A65477F6F.idx  imgui_tables.cpp.B96759915C9AB959.idx  imgui_widgets.cpp.62ABB58C8CD9FAF6.idx  imstb_rectpack.h.C0C2C545AC4678C3.idx  imstb_textedit.h.E50532F39904A703.idx  imstb_truetype.h.B4BA0D38BE9EC08E.idx  interval.hpp.3E0DA8E5A3812BFC.idx  khrplatform.h.E7B4CBB01BD5F631.idx  main.cpp.839E9052E80D159C.idx  material.hpp.848DEC173CB897DA.idx  ray.hpp.D7146826FA8A98C2.idx  rt.hpp.8B79F867B42481AD.idx  sphere.hpp.22CB70901DAE24E6.idx  vec3.hpp.DFC327AD5AC1AD9A.idx
.github/workflows/: build.yml
inc/: aabb.hpp  bvh.hpp  camera.hpp  color.hpp  constant_medium.hpp  cuda_structs.hpp  gpu_type_conversion.hpp  hittable.hpp  hittable_list.hpp  interval.hpp  material.hpp  perlin.hpp  quad.hpp  ray.hpp  rt.hpp  rtw_stb_image.hpp  scene_serialization.hpp  sphere.hpp  texture.hpp  vec3.hpp  vulkan_app.hpp
inc/cuda/: bvh_kernel.cuh  camera.cuh  color.cuh  ray.cuh  sphere.cuh  vec.cuh
shaders/: fullscreen.vert  tonemap.frag
src/: cuda_renderer.cu  cuda_structs.cpp  main.cpp  vulkan_app.cpp
